creusot/tests/should_fail/prusti/expiry/no_blocked_elided.stderr
error: function has no blocked anonymous regions
 --> no_blocked_elided.rs:4:1
  |
4 | #[after_expiry(true)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `after_expiry` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

